--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
 <head>
     <meta charset="UTF-8">
-    <title>Crash Course</title>
+    <title>Cats!</title>
 </head>
 <body>
     <section id="container">
